# docs/assets/js/swagger.yml
@@ -3698,6 +3698,22 @@ paths:
           $ref: "#/components/responses/NotFound"
         default:
           $ref: "#/components/responses/ServerError"
+    options:
+      tags:
+        - objects
+      operationId: uploadObjectPreflight
+      responses:
+        204:
+          description: user has permissions to upload an object
+        401:
+          $ref: "#/components/responses/Unauthorized"
+        403:
+          $ref: "#/components/responses/Forbidden"
+        404:
+          $ref: "#/components/responses/NotFound"
+        default:
+          $ref: "#/components/responses/ServerError"
+
     post:
       tags:
         - objects
@@ -4256,6 +4272,21 @@ paths:
           $ref: "#/components/responses/NotFound"
         default:
           $ref: "#/components/responses/ServerError"
+    
+    options:
+      tags:
+        - retention
+      operationId: setGarbageCollectionRulesPreflight
+      responses:
+        204:
+          description: user has permissions to set garbage collection rules
+        401:
+          $ref: "#/components/responses/Unauthorized"
+        404:
+          $ref: "#/components/responses/NotFound"
+        default:
+          $ref: "#/components/responses/ServerError"
+    
     post:
       tags:
         - retention
@@ -4380,6 +4411,20 @@ paths:
           $ref: "#/components/responses/NotFound"
         default:
           $ref: "#/components/responses/ServerError"
+    options:
+      tags:
+        - repositories
+      operationId: createBranchProtectionRulePreflight
+      responses:
+        204:
+          description: user has permissions to create a branch protection rule
+        401:
+          $ref: "#/components/responses/Unauthorized"
+        404:
+          $ref: "#/components/responses/NotFound"
+        default:
+          $ref: "#/components/responses/ServerError"
+
     post:
       tags:
         - repositories
